# cawg-identity-core

./: COPYRIGHT  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yml
src/: assertion_builder.rs  credential_holder.rs  debug_byte_slice.rs  identity_assertion.rs  lib.rs  tbs.rs
src/builder/: assertion_builder.rs  credential_holder.rs  identity_assertion_builder.rs  manifest_builder.rs  mod.rs
src/builder/credential_holders/: mod.rs  x509.rs
src/c2pa/: assertion_store.rs  claim.rs  hashed_uri.rs  manifest.rs  manifest_store.rs  mod.rs
src/claim_aggregation/: cose_vc_signature_handler.rs  identity_assertion_vc.rs  identity_claims_aggregation_vc.rs  mod.rs  temp_cose.rs
src/claim_aggregation/w3c_vc/: credential.rs  did.rs  did_doc.rs  did_web.rs  jwk.rs  mod.rs
src/identity_assertion/: mod.rs  named_actor.rs  signature_handler.rs  signer_payload.rs
src/internal/: mod.rs  naive_credential_handler.rs
src/internal/w3c_vc/: credential.rs
src/tests/: assertion_builder.rs  builder.rs  debug_byte_slice.rs  identity_assertion.rs  mod.rs  poc.rs  tbs.rs  w3c_vc.rs  x509.rs
src/tests/c2pa/: hashed_uri.rs  mod.rs  parser.rs
src/tests/claim_aggregation/: interop.rs  mod.rs  test_issuer.rs  validation_error_cases.rs
src/tests/claim_aggregation/w3c_vc/: did.rs  did_buf.rs  did_web.rs  jwk.rs  mod.rs
src/tests/fixtures/: mod.rs  naive_credential_handler.rs  naive_credential_holder.rs
src/tests/fixtures/certs/: README.md
src/tests/w3c_vc/: mod.rs  self_issuance.rs  self_issued_vc.rs  test_issuer.rs
src/validation/: error.rs  mod.rs
src/w3c_vc/: cawg_identity_context.rs  cose_vc_signature_handler.rs  creator_identity_assertion_issuer.rs  identity_assertion_vc.rs  mod.rs  temp_cose.rs  vc_signature_handler.rs
src/w3c_vc/temp_cose/: credential.rs  mod.rs
src/x509/: mod.rs
