[package]
name = "cawg-identity-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.78"
base64 = "0.22"
c2pa = { version = "0.33.0", features = ["openssl_ffi_mutex"] }
chrono = "0.4.38"
ciborium = "0.2.2"
coset = "0.3.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex-literal = "0.4.1"
http = "0.2" # out of date, can we remove or update?
iref = { version = "3.2.2", features = ["serde"] }
json-ld-syntax = "0.21.1"
json-syntax = { version = "0.12.5", features = ["serde"] }
jumbf = "0.4.0"
linked-data = { version = "0.1.2", features = ["derive"] }
multibase = "0.9.1"
nonempty-collections = { version = "0.2.9", features = ["serde"] }
non-empty-string = { version = "0.2.4", features = ["serde"] }
rand = "0.8.5"
rdf-types = "0.22.4"
regex = "1.11"
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
static-iref = "3.0"
thiserror = "1.0.61"
xsd-types = { version = "0.9.5", features = ["serde"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[dev-dependencies]
c2pa = { version = "0.33.0", features = ["file_io", "openssl_sign", "openssl_ffi_mutex"] }
futures = "0.3.30"
hyper = { version = "0.14.30", features = ["client", "http1", "server", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_jcs = "0.1.0" # unmaintained, try to remove
tempfile = "3.10.1"
tokio = { version = "1.40", features = ["macros"] }
